# credit-design-intelligence-platform

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
configs/: config.yaml
src/credit_decision_intelligence/config/: __init__.py  reader.py  schema.py  settings.py  test.py
src/credit_decision_intelligence_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/unit/: test_config.py  test_settings.py
