[build-system]
requires = ["setuptools>69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-decision-intelligence-platform"
version = "0.1.0"
description = "Production-grade credit decision intelligence platform for credit risk modeling, policy decisions, explainability, monitoring, and API deployment."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    {name = "Sumit Singh"}
]
license = {text = "MIT"}
keywords = [
    "credit-risk",
    "machine-learning",
    "fintech",
    "credit-decisioning",
    "mlops",
    "fastapi",
    "mlflow",
    "model-monitoring"
]

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "shap>=0.45.0",
    "mlflow>=2.11.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "pandera>=0.18.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.1.0"
]

[tools.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "C4",
    "SIM"
]
ignore  = []

[tools.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --cov=credit_decision_intelligence --cov-report=term-missing"

[tool.coverage.run]
source = ["src/credit_decision_intelligence"]
branch = true

[tools.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true